<resources>
    <string name="app_name">Instant News</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome, Razz!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="most_searches">See Most Searches</string>
    <string name="search_news">Search News</string>
    <string name="profile_picture">Profile picture</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_join_us">New user? Join us!</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="photo">Photo</string>
    <string name="saved_news">Saved News</string>
    <string name="preferences">Preferences</string>
    <string name="top_news">Top News</string>
    <string name="see_all">See all</string>
    <string name="football">Football</string>
    <string name="search_by_image">Search by image</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone number</string>
    <string name="otp_code">OTP Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number!</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_40">+40-</string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to:</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="email_verification">Email Verification</string>
    <string name="email_confirmation">To have full access to the application, you must confirm your email. Press the button below to start the confirmation</string>
    <string name="verify_email">VERIFY EMAIL</string>
    <string name="reset_password">If you have forgotten your password, fill in the email below and we will send you a link to reset your password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="date">01 January 2001</string>
    <string name="desc">Desc</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="log_out">Log Out</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="about_me">About me</string>
    <string name="my_profile">My Profile</string>
    <string name="analytics">Analytics</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="current_user">Current User</string>
    <string name="others">Others</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="warning1">Provide your personal information, even if the account is for something like a business or pet. It won\'t be part of your public profile.</string>
    <string name="warning2">To keep your account secure, don\'t enter an email or phone number that belongs to someone else.</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="new_email">New email</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="total_news_language">Total news language</string>
    <string name="total_news_categories">Total News Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="predominant_words">Predominant Words</string>
    <string name="number_of_searches">Number of searches</string>
</resources>