<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/about_me">
        <menu>
    <group android:checkableBehavior="single">
    <item android:id="@+id/menuProfile"
          android:icon="@drawable/profile"
          android:title="@string/my_profile" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/menuNotifications"
            android:icon="@drawable/bell"
            android:title="@string/notifications" />
            </group>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menuAnalytics"
                    android:icon="@drawable/analytics"
                    android:title="@string/analytics" />
            </group>

            <group android:checkableBehavior="single">
                <item android:id="@+id/menuLogout"
                    android:icon="@drawable/logout"
                    android:title="@string/log_out" />
            </group>



        </menu>
    </item>
</menu>