<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:background="@drawable/background"
    tools:context=".SendOTP">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/send_otp"
            android:contentDescription="@string/otp_code">
        </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/otp_verification"
                android:textColor="@color/common_google_signin_btn_text_light"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textSize="14sp" />
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_40"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:autofillHints="no"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/_123456789"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="#808080"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:background="#808080"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getOTP"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_curve"
                    android:backgroundTint="@null"
                    android:textColor="#FFFFFF"
                    android:text="@string/get_otp"
                    />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    </LinearLayout>

</ScrollView>