<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ConfirmEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/email"
            android:contentDescription="@string/email">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/email_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/common_google_signin_btn_text_light">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/email_confirmation"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/button_curve"
            android:gravity="center"
            android:backgroundTint="@null"
            android:textColor="#FFFFFF"
            android:text="@string/verify_email"
            />

    </LinearLayout>

</ScrollView>