<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC5B9"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="30sp"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:background="#B0A89C"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#252422" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/first">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/button_curve"
            android:backgroundTint="@null"
            android:layout_gravity="center"
            android:text="@string/send_email"
            android:textColor="#252422" />

    </LinearLayout>



</RelativeLayout>